2009-09-24  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Jan Alonzo.

        [GTK] DRT must display window instead of just realizing, to enable synthesizing events correctly
        https://bugs.webkit.org/show_bug.cgi?id=29693

        Show the window, to be able to synthesize events correctly.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (runTest):
        (main):

Canonical link: https://commits.webkit.org/40284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48721 268f45cc-cd09-0410-ab3c-d52691b4dbfc